# cognitia

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  SUBSCRIPTION_SETUP.md  alembic.ini  docker-compose.dev.yml  docker-compose.memory.yml  memory_addon_architecture.md  pyproject.toml  pytest.ini  rebuild_docker.sh  requirements.txt  test_api_v2.sh  test_chats_v2.sh  test_phase2.py  test_repositories.py
alembic/: env.py
alembic/versions/: 5ea8724a9737_v2_schema_enhancements.py  9a3b7c2d1e4f_add_memory_system_tables.py  f1d2e3a4b5c6_add_sentiment_score_to_relationships.py
configs/: assistant_config.yaml  cognitia_config.yaml  cognitia_memory_config.yaml  cognitia_network_config.yaml
data/: conversation_memory.json
deploy/: .env.example  .env.gpu.example  Dockerfile.api  Dockerfile.auth  Dockerfile.gpu-memory  Dockerfile.gpu-rvc  Dockerfile.gpu-service  Dockerfile.gpu-stt  Dockerfile.gpu-tts  Dockerfile.web  docker-compose.gpu.yaml  docker-compose.yaml  rvc_fp32_wrapper.py
docs/: MEMORY_SYSTEM_DESIGN.md  PROMPT_TEMPLATES.md
migrations/: add_prompt_template.sql
rvc/: Dockerfile  README.md  docker-compose.yml
scripts/: README.md  check_health.py  create_admin.py  generate_icons.py  install.py  manage_users.py  migrate_add_subscriptions.py  smoke_test_ingress.sh  start_client.sh  start_core.sh  start_server.sh
scripts/archive/: README.md  full_restart.sh  start_client_v2.1.sh  start_gpu_server.sh  start_server_v2.1.sh
src/: test_repositories.py
src/cognitia/: __init__.py  cli.py
src/cognitia/TTS/: __init__.py
src/cognitia/api/: __init__.py  auth.py  cache.py  database.py  llm_fallback.py  main.py  main_old.py  memory_client.py  orchestrator.py  routes_auth.py  routes_call.py  routes_characters.py  routes_chats.py  routes_memory.py  routes_models.py  routes_stream.py  routes_subscription.py  schemas.py  streams.py
src/cognitia/asr_core/: mel_spectrogram.py
src/cognitia/audio_io/: __init__.py  network_io.py  sounddevice_io.py
src/cognitia/auth/: __init__.py  config.py  jwks.py  schemas.py  server.py
src/cognitia/bridge/: __init__.py  protocol.py  server.py
src/cognitia/cognitia_ui/: cognitia.tcss  text_resources.py
src/cognitia/core/: __init__.py  audio_data.py  component.py  engine.py  exceptions.py  llm_processor.py  orchestrator.py  resilience.py  server.py  speech_listener.py  speech_player.py  state.py
src/cognitia/devtools/: __init__.py  smoke_memory_pipeline.py  smoke_orchestrator_memory_publish.py
src/cognitia/entrance/: __init__.py  admin.py  auth.py  celery_app.py  database.py  dependencies.py  email_service.py  memory_client.py  memory_service.py  middleware.py  payment.py  schemas.py  server.py  subscription.py  tasks.py  usage_tracker.py
src/cognitia/entrance/core/: exceptions.py  security.py
src/cognitia/entrance/repositories/: __init__.py  base.py  character_repository.py  chat_repository.py  email_verification_repository.py  message_repository.py  password_reset_repository.py  subscription_repository.py  user_repository.py
src/cognitia/entrance/schemas/: auth.py  character.py  chat.py  memory.py  user.py
src/cognitia/memory/: Dockerfile  __init__.py  celery_app.py  combined_memory.py  config.py  conversation_memory.py  entity_memory.py  function_calling.py  graphiti_client.py  llm_utils.py  memory_manager.py  models.py  persona_store.py  qdrant_memory.py  requirements.txt  server.py  tasks.py
src/cognitia/memory_worker/: __init__.py  server.py
src/cognitia/orchestrator/: __init__.py  server.py
src/cognitia/stt/: __init__.py  server.py
src/cognitia/tts/: __init__.py  server.py
src/cognitia/tts_core/: __init__.py  phonemizer.py  rvc_service.py  rvc_wrapper.py
src/cognitia/tui/: __init__.py  app.py
src/cognitia/utils/: __init__.py  resources.py
tests/: conftest.py  test_api_endpoints.py  test_integration.py  test_spoken_text_converter.py
tests/api/: conftest.py
tests/integration/: test_multi_user_memory.py
tests/unit/: test_auth_database.py  test_exceptions.py  test_jwt.py  test_permissions.py  test_permissions_standalone.py  test_state.py  test_user_manager.py
web/: admin.html  index.html  pricing.html
web/css/: style.css
web/js/: api.js  app.js  audio.js  websocket.js
(+8 files in other folders)
